--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-
 <!-- include head  -->
 <%- include('incs/header.ejs') %>
 
@@ -6,8 +5,49 @@
 <%- include('incs/navbar.ejs') %>
 
 <!-- Write content of page  -->
-<h2>Home Page</h2>
+<div class="products mt-3">
+    <div class="container-fluid">
+
+        <form action="/" method="GET">
+            <select name="category" class="form-control mb-3">
+                <option value="all">All</option>
+                <option value="phones">Phones</option>
+                <option value="computers">Computers</option>
+                <option value="clothes">Clothes</option>
+            </select>
+            
+            <input type="submit" value="Filter" class="btn btn-primary px-5">
+        </form>
+        <hr>
+        <div class="row">
+
+            <% for( let i =0; i < products.length; i++) { %>
+            <div class="col-md-6 col-lg-4 col-xl-3 mb-2">
+                <div class="card">
+                    <img src="<%= products[i].image %>" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="d-flex">
+                                <h5 class="card-title mr-auto"><a href="/product/<%= products[i]._id %>"><%= products[i].name %></a></h5>
+                                <p class="lead"><%= products[i].price %></p>
+                        </div>
+                        
+                        <p class="card-text"><%= products[i].description %></p>
+                        <form action="/cart" method="POST">
+                            <input type="number" name="amount" placeholder="Entre amount" class="form-control">
+                            <hr>
+                            <input type="submit" value="Add to cart" class="btn btn-primary form-control">
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <% } %>
+        </div>
+    </div>
+</div>
+
 <!-- end content of page  -->
+
 
 
 <!-- include footer  -->
