--- a/views/incs/navbar.ejs
+++ b/views/incs/navbar.ejs
@@ -12,9 +12,11 @@
                         <li class="nav-item active">
                             <a class="nav-link pl-0" href="/">Home</a>
                         </li>
+                        <% if (isLogin) { %>
                         <li class="nav-item">
                             <a class="nav-link" href="/cart">Cart</a>
                         </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="/orders">Orders</a>
                         </li>
@@ -22,9 +24,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/admin/add">Add Product</a>
                         </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="/admin/orders">Manage Orders</a>
                         </li>
+                        <% } %>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
@@ -33,14 +37,18 @@
                                 My Account
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <% if (!isLogin) { %>
                                 <a class="dropdown-item" href="/login">Login</a>
                                 <a class="dropdown-item" href="/signup">Register</a>
-                                <div class="dropdown-divider"></div>
+                                <% } %>
+
+                                <% if (isLogin) { %>
                                 <a class="dropdown-item" href="/logout">Logout</a>
+                                <% } %>
                             </div>
                         </li>
                     </ul>
-                    
+
                 </div>
             </div>
         </nav>
