--- a/views/incs/navbar.ejs
+++ b/views/incs/navbar.ejs
@@ -16,23 +16,18 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/cart">Cart</a>
                         </li>
+
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="/orders">Orders</a>
+                            <a class="nav-link" href="/admin/add-product">Add Product</a>
                         </li>
                         
-                        <li class="nav-item">
-                            <a class="nav-link" href="/admin/add">Add Product</a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link" href="/admin/orders">Manage Orders</a>
-                        </li>
+
                         <% } %>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 My Account
                             </a>
